--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required (VERSION 3.2)
 project (roomed-game)
 
-# set(Boost_USE_STATIC_LIBS OFF)
-# set(Boost_USE_MULTITHREADED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
-# find_package(Boost COMPONENTS filesystem REQUIRED)
-
 set(SRC_LIST src/cpp/main.cpp)
+set(LIB_LIST GLEW glfw pthread) # g++ refuses to compile multithreaded code without pthread lib.
+
 include_directories(src/h/)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
-# target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${LIB_LIST})
 
 add_subdirectory (src/google-test) # build google-test library.
 add_subdirectory (src/tests) # build tests.
