Added aabb class and tests for it.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required (VERSION 3.2)
 
 project (tests)
 
-set (SRC_LIST src/main.cpp)
+set (SRC_LIST src/aabb-test.cpp)
 include_directories (../google-test/include)
+include_directories (../h)
 add_executable (run-tests ${SRC_LIST})
 
 target_link_libraries (run-tests gtest gtest_main) 
