Progress on world, entity, model, triangle.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required (VERSION 3.2)
 project (roomed-game)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra")
-set(SRC_LIST src/cpp/main.cpp)
+set(SRC_LIST src/cpp/main.cpp
+             src/cpp/world.cpp)
 set(LIB_LIST GLEW glfw pthread) # g++ refuses to compile multithreaded code without pthread lib.
 
 include_directories(src/h/)
