fixed util/optional, util/read-file, added tests.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required (VERSION 3.2)
 
 project (tests)
 
-set (SRC_LIST src/aabb-test.cpp)
+set (SRC_LIST src/aabb-test.cpp
+              src/read-file-test.cpp
+              ../cpp/util/read-file.cpp)
 include_directories (../google-test/include)
 include_directories (../h)
 add_executable (run-tests ${SRC_LIST})
