--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required (VERSION 3.2)
 
-project (tests)
+project (roomed-game-tests-binary)
 
 set (SRC_LIST src/aabb-test.cpp
               src/read-file-test.cpp
               ../cpp/util/read-file.cpp)
 include_directories (../google-test/include)
 include_directories (../h)
-add_executable (run-tests ${SRC_LIST})
 
-target_link_libraries (run-tests gtest gtest_main) 
+add_executable (roomed-game-tests-binary ${SRC_LIST})
+
+target_link_libraries (roomed-game-tests-binary gtest gtest_main) 
 
